# autonomous-physics-lab

./: .apl-local-secrets.env.example  .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CODEX_TASK.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
agent_runs/: README.md
agents/: AGENT-TEMPLATE.md  AGENT-TEMPLATE.yaml  README.md  architect.md  architect.yaml  data-acquisition.yaml  example-agent.yaml  fresh-source-scout.yaml  microtask-agent.md  microtask-agent.yaml  researcher.md  researcher.yaml  review-agent.md  review-agent.yaml  scientific-curator.md  scientific-curator.yaml  task-proposal-agent.md  task-proposal-agent.yaml
approximation_probes/: AP-0001-small-angle-pendulum.yaml  README.md
campaign_profiles/: README.md  _catalog.yaml  anharmonic-oscillator.yaml  atomic-clock-residuals.yaml  dimensional-analysis-validator.yaml  exoplanet-mass-radius.yaml  materials-property-residuals.yaml  nuclear-mass-surface.yaml  particle-mass-relations.yaml  pendulum-formula-falsification.yaml  quantum-size-effects.yaml  textbook-formula-audit.yaml  thermophysical-property-residuals.yaml
campaigns/: catalog.yaml  task-index.yaml
claims/: CLAIM-0001-pendulum-period-amplitude.md  CLAIM-0002-damped-oscillator-regimes.md  CLAIM-0003-koide-charged-lepton-reproduction.md  CLAIM-0004-koide-tau-holdout.md  CLAIM-0005-dimensional-analysis-validator.md  CLAIM-0006-koide-quark-falsification.md  CLAIM-0007-nuclear-shell-correction.md  CLAIM-0007-particle-mass-falsifier-mvp.md  CLAIM-0008-muon-g2-lepton-cascade-empirical.md  CLAIM-0009-anharmonic-oscillator-period.md  CLAIM-0010-nuclear-mass-baseline.md  CLAIM-0011-stellar-ml-debcat-alpha35-adequacy.md  CLAIM-0011-textbook-exact-reference-software-fixtures.md
constants_verification/: README.md
data/: DATA_LICENSES.yaml  acquisition_queue.yaml
docs/: agent-capacity-board.md  agent-catalog.md  agent-network-status.md  agent-operating-model.md  agent-research-log.md  agent-scientific-work-mode.md  agent-task-claiming.md  agent-task-protocol.md  agent-work-menu.md  announcement-draft-pendulum-gauntlet.md  announcement-v0.1-public-alpha.md  architecture-index.md  architecture-layers.md  architecture.md  autonomous-research-loop.md  backlog.md  blind-holdout-benchmark-protocol.md  campaign-autonomy-whitelist.md  campaign-curator-pools.md  campaign-curator-protocol.md  campaign-maturity-states.md  campaign-navigator-agent.md  campaign-navigator-protocol.md  campaign-output-scorecard.md  campaign-registry.md  ci-full-repo-policy.md  claim-promotion-policy.md  claim-review-cadence.md  connect-your-agent.md  contributing-workflow.md  cross-platform-compatibility.md  current-missions.md  evergreen-science-queues.md  experiment-flow.md  (+72 more)
(+3784 files in other folders)
