[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-physics-lab"
version = "0.1.0"
description = "Autonomous Physics Lab for hypothesis generation, simulation, falsification, and formula discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
physics-lab = "physics_lab.cli:app"

[tool.setuptools.packages.find]
include = ["physics_lab*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
