[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-physics-lab"
version = "0.1.0"
description = "Autonomous Physics Lab for hypothesis generation, simulation, falsification, and formula discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
]
thermoml = [
    "rdkit==2025.9.3",
    "thermo==0.6.0",
]

[project.scripts]
physics-lab = "physics_lab.cli:app"

[tool.setuptools.packages.find]
include = ["physics_lab*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 60
# Parallel by default with pytest-xdist (a dev dependency co-installed with
# pytest), matching CI. `--dist loadgroup` keeps declared resource-sensitive
# groups on one worker while preserving parallel execution for the rest of the
# suite. Override with `-n0` to run serially (e.g. for a single-test debug).
# See TASK-0501 and TASK-0523.
addopts = "-p no:cacheprovider -n auto --dist loadgroup"
markers = [
    "full_repo: slow full-repository smoke checks kept for main/nightly/full validation runs",
    "resource_sensitive: measured high-memory tests isolated by the Windows fast lane",
]

[tool.coverage.run]
branch = true
patch = ["subprocess"]
relative_files = true
source = ["physics_lab", "scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise SystemExit\\(main\\(\\)",
]
